
New in 2.1.14
-------------

Fixed wxTreeCtrl.HitTest to return both the tree item as well as the
flags that clairify where the click was in relation to the item.

Fixed thread state problem in wxTreeCtrl.GetBoundingBox and
GetSelections.

Fixed some problems in OGL.  Also wxShape.SetClientData and
.GetClientData can now deal with Python objects.





What's new in 2.1.13
--------------------
Skipped a version number to match what has been released for wxGTK.

Updated wxMVCTree and added a demo for it, also fixed layout on GTK
and some flicker problems.

Added a wrapper class for the Visualization ToolKit (or VTK) in the
wxPython.lib.vtk module.  (http://www.kitware.com/)

Fixed wxTreeCtrl.SetItemImage and GetItemImage to recognise the new
"which" parameter.

Added wxPython.lib.spashscreen from Mike Fletcher.

Added wxPython.lib.filebrowsebutton also from Mike Fletcher.

Renamed wxTreeCtrl.GetParent to GetItemParent to avoid a name clash
with wxWindow.GetParent.

Added wxIntersectRect to compute the intersection of two wxRect's.
It is used like this:

   intersect = wxIntersectRect(rect1, rect2)

If r1 and r2 don't intersect then None is returned, otherwise the
rectangle representing the intersection is returned.

Some bug fixes for Clipboard and Drag-n-Drop.

Rotated text!!!  WooHoo!  (See wxDC.DrawRotatedText())

Added a set of Generic Buttons to the library.  These are simple
window classes that look and act like native buttons, but you can have
a bit more control over them.  The bezel width can be set in addition
to colours, fonts, etc.  There is a ToggleButton as well as Bitmap
versions too.  They should also serve as a good example of how to
create your own classes derived from wxControl.

The C++ wxToolBar classes have been redone, and so have the wxPython
wrappers.  There have been slight modifications to some of the methods
but shouldn't impact anybody too much.  I took the opportunity to add