@@ -300,6 +300,9 @@ class wxListCtrlPtr(wxControlPtr):
     def SetWindowStyleFlag(self, *_args, **_kwargs):
         val = apply(controls2c.wxListCtrl_SetWindowStyleFlag,(self,) + _args, _kwargs)
         return val
+    def SortItems(self, *_args, **_kwargs):
+        val = apply(controls2c.wxListCtrl_SortItems,(self,) + _args, _kwargs)
+        return val
     def __repr__(self):
         return "<C wxListCtrl instance at %s>" % (self.this,)
 class wxListCtrl(wxListCtrlPtr):
